  reversed.  (Hugo Kornelis)
- Set wrapping width to 72 for character dumps' item information, to
  avoid well-behaved newsreaders messing them up.
- Move back to pre-3.0.6 panel changing behaviour.
- Semi-rewrite of the store code; now uses a scrolling menu with a
  slightly more streamlined interface.  Bigscreen support in stores.
  Ammo is treated in more aesthetically pleasing quantities.
  General Store always stocks what it stocks now.
- Remove double-rate spellcasting with the smart_monsters option.
  (imported from V CVS; Julian Lighton).
- '[' command displays a monster list in the main terminal window.
- "Enter" key brings up a little window in the middle of the screen,
  from which you can select what command you would like to use.  This
  is inspired by (but not derived from) Hengband.
- Prompt for overwriting savefiles.
- Added echo to macro trigger entry.
- Restore some pre-Ben flavour text.


Major code cleanup
------------------

Most of the cleanup has been related to removing ancient or
non-functional cruft.

- A powerful generic menu interface has been added and used throughout
  the code.  It reduces code duplication and makes it much much easier
  to create menus in various styles; e.g. scrolling or multicolumn.
  See ui.c.
- Event handler added. (Menus can listen to each other, etc.)
- Lots and lots of code duplication removed:
  - pref file dumping now has much less boilerplate
  - the status line, sidebar, and term window update code is much more
    streamlined.
- Nuked a lot of old ports: cap, lsl, sla, xpj, ibm, dos, vcs, lfb, ami,
  emx, vme.
- Added a new SDL port by Iain McFall, based on the ToME and Sang ports.
- As a result of the above, makefiles considerably simplified.  As many
  makefiles as possible use a common list of source files in
  "Makefile.src", which simplifies maintainance.  Makefile.std has also
  been rewritten and contains much less cruft.
- Timed player modifiers (blind, confused, etc.) are now kept in an